<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/billingHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="62dp"
            android:text="Billing Information"
            android:textColor="#FF0000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/payment_email_hint"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/credit_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/debit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/debit_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/amount_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/payment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/makePayment_button" />
        <!--  android:onClick="makePayment"-->/>

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Debit or Credit "
        app:layout_anchor="@+id/linearLayout2"
        app:layout_anchorGravity="bottom|center" />
</androidx.constraintlayout.widget.ConstraintLayout>