<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/by"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="675dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="675dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userProfileText"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!--edit name-->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="136dp"
                android:layout_height="119dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/default_profile" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/profile_name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name" />

            <!--edit password-->
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_password"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:text="@string/profile_password" />

            <!--edit phone-->
            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_phone" />

            <EditText
                android:id="@+id/cPhoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="phone"
                android:text="@string/phone" />

            <!--edit email-->
            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profile_email"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email" />

            <!--edit address-->
            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profile_address"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textWebEmailAddress"
                android:text="@string/address" />

            <!--edit credit card-->
            <TextView
                android:id="@+id/creditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profile_credit"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cCreditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textWebEmailAddress"
                android:text="@string/credit" />

            <!--edit debit card-->
            <TextView
                android:id="@+id/debitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/debit"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cDebitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textWebEmailAddress"
                android:text="@string/debit" />


            <Button
                android:id="@+id/profileUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="updateProfile"
                android:text="Update Profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        android:backgroundTint="@color/purple_500"
        android:gravity="bottom"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <Button
        android:id="@+id/payment"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/purple_500"
        android:text="Pay"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/logout"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/bookAppointment"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="toBook"
        android:text="Book"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/home"
        app:layout_constraintStart_toEndOf="@+id/editProfile"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/editProfile"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/white"
        android:onClick="toEditProfile"
        android:text="Profile"
        android:textColor="#4D00EA"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/bookAppointment"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <Button
        android:id="@+id/home"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="toEditProfile"
        android:text="Home"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/payment"
        app:layout_constraintStart_toEndOf="@+id/bookAppointment"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="bye"
        android:text="logout"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/payment"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:strokeColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>