<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF001E"
            android:visibility="gone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:baselineAligned="false"
            android:hint="@string/password_hint" />

        <Button
            android:id="@+id/button_logIn"
            android:layout_width="230dp"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:onClick="logIn"
            android:text="@string/logIn_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>